# rust_notify_server

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  docker-compose.yml  dockerfile  kind-config.yaml
k8s/: README.md  account.yaml  deployment.yaml  service.yaml
src/: main.rs
src/config/: config.rs
src/consumers/: batch_notify_job.rs  consumer.rs  initializer.rs  mod.rs  send_request_handler.rs  single_notify_job.rs
src/consumers/error/: consumer_error.rs  job_error.rs  mod.rs  request_error.rs
src/entity/: backstage_send_task.rs  backstage_send_task_detail.rs  client_notify_event.rs  client_notify_template.rs  language.rs  mod.rs  mq_failed_record.rs  mq_success_record.rs  notify_event.rs  notify_level.rs  notify_record.rs  notify_status.rs  notify_template.rs  notify_type.rs  platform.rs  task_status.rs
src/enums/: client_notify_template_common_key.rs  language.rs  mod.rs  notify_event.rs  notify_level.rs  notify_status.rs  notify_type.rs  platform.rs  task_status.rs
src/helper/: mod.rs  snowflake.rs
src/migration/: m20240618_001_create_update_trigger_function.rs  m20240619_001_create_failed_record.rs  m20240619_002_create_success_record.rs  m20240619_003_create_language.rs  m20240619_005_create_notify_template.rs  m20240619_006_create_notify_event.rs  m20240619_007_create_notify_type.rs  m20240619_008_create_notify_level.rs  m20240619_009_create_client_notify_template.rs  m20240619_010_create_client_notify_event.rs  m20240619_011_create_notify_records.rs  m20240619_012_create_notify_status.rs  m20240708_001_create_platform.rs  m20240710_001_create_task_status.rs  m20240710_002_create_backstage_send_task.rs  m20240710_003_create_backstage_send_task_detail.rs  mod.rs
src/mq_manager/: manager.rs  mod.rs  model.rs
src/notify_server/: mod.rs
src/notify_server/application/: kube_api.rs  mod.rs  notify_handler.rs
src/notify_server/application/oauth_server/: mod.rs  oauth_rpc.rs
src/notify_server/controller/: backstage_notify.rs  frontend_notify.rs
src/notify_server/facade/: backstage_notify.rs  frontend_notify.rs  mod.rs
src/notify_server/model/: mod.rs  notify_model.rs
src/repository/: backstage_send_task.rs  backstage_send_task_detail.rs  client_notify_event.rs  client_notify_template.rs  mod.rs  mq_failed_record.rs  mq_success_record.rs  notify_record.rs
(+1 files in other folders)
