[package]
name = "notify_grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# own dependencies
database-manager = { git = "http://gitlab.kgs.asia/rust_lib/database-manager.git", branch = "master" }
kgs-err = { git = "http://gitlab.kgs.asia/rust_lib/kgs-err.git", branch = "master" }
protos = { git = "http://gitlab.kgs.asia/rust_lib/protos.git", branch = "feature/k8s" }
# protos = {path = "/Users/jason/kgs_lib/protos"}
kgs-tracing = { git = "http://gitlab.kgs.asia/rust_lib/kgs-tracing.git", branch = "master" }

# for rabbit mq
lapin = "2.3.4"
deadpool = { version = "0.12.0", features = ["managed"] }
deadpool-lapin = "0.12.1"

# utility
tokio = { version = "1.19", features = ["rt-multi-thread", "macros", "full"] }
tokio-stream = "0.1.15" # for stream
futures = "0.3.30" # for async
async-trait = "0.1.53" # for async trait
chrono = { version = "0.4.31", features = ["serde"] } # for time
once_cell = "1.19.0" # for config
dotenv = "0.15.0" # for config
envy = "0.4.2" # for config
reqwest = { version = "0.11.24", features = [
  "json",
] } # for send http request                                                     # for tracing
rs-snowflake = { version = "0.6.0" } # for snowflake
serde = { version = "1.0", features = ["derive"] } # for serialize
serde_json = "1.0" # for serialize
rand = "0.8.4" # for random
tonic = "0.11.0" # for grpc
tonic-types = "0.11.0" # for grpc
redis = "0.25.4"
kube = { version = "0.93.1", default-features = false, features = ["client", "openssl-tls"]} # for k8s
k8s-openapi = { version = "0.22.0", features = ["latest"] } # for k8s


# for database
[dependencies.sea-orm]
version = "1.0.0-rc.4"
features = [
  "debug-print",
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` featrure
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
  "with-bigdecimal",      # `WITH_BIGDECIMAL` feature
  "with-json",            # `WITH_JSON` feature
]

# for migration
[dependencies.sea-orm-migration]
version = "1.0.0-rc.4" # sea-orm-migration version
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  "runtime-actix-native-tls",
  "sqlx-postgres",
]
